--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-  <html lang="pl-PL">
-  <html>
-    <head>
-      <meta charset="utf-8">
-      <title>Alan</title>
-    </head>
-  </html>
-    
-    <p align="left"> <font color="blue" size="7" face="Arial"> Alan </font> </p> <br>
-    <p align="left"> <font color="blue" size="6" face="Arial"> Alan </font> </p> <br>
-    <p align="left"> <font color="blue" size="5" face="Arial"> Alan </font> </p> <br>
-    <p align="left"> <font color="blue" size="4" face="Arial"> Alan </font> </p> <br>
-    <p align="left"> <font color="blue" size="3" face="Arial"> Alan </font> </p> <br>
-    <p align="left"> <font color="blue" size="2" face="Arial"> Alan </font> </p> <br>
-    <p align="left"> <font color="blue" size="1" face="Arial"> Alan </font> </p> <br>
-    
+      <html lang="pl-PL">
+      <html>
+             <head>
+                   <meta charset="utf-8">
+                   <title>Hubert</title>
+            </head>
+             <body>
+       <p align="left"> <font color="red" size="7" face="Arial"> Alan </font> </p> <br>
+       <p align="left"> <font color="red" size="6" face="Arial"> Alan </font> </p> <br>
+       <p align="left"> <font color="red" size="5" face="Arial"> Alan </font> </p> <br>
+       <p align="left"> <font color="red" size="4" face="Arial"> Alan </font> </p> <br>
+       <p align="left"> <font color="red" size="3" face="Arial"> Alan </font> </p> <br>
+       <p align="left"> <font color="red" size="2" face="Arial"> Alan </font> </p> <br>
+       <p align="left"> <font color="red" size="1" face="Arial"> Alan </font> </p> <br>
+              </body>
+           </html>
+<br>
+     </body>
+<p align="right"> <font color=„blue” size=„3” face=„Arial”> 69-420 Ulica Fajna </font> </p> <br>
+     </body>
+   </html>
+           <center>  <p > <font color="green" size="5" face="Arial"> Ulubiony kolor: Zielony </font> </p> <br>  <center>
+           <p > <font color="red" size="4" face="Arial"> Ulubiony zespół muzyczny: kanye west </font> </p> <br>
+           <p > <font color="black" size="3" face="Arial"> Data urodzenia: 23 czerwca 2006 </font> </p> <br>
+           <p align="right"> <font color="pink" size="2" face="Arial"> H2SO4 </font> </p> <br>
+           <p align="right"> <font color="pink" size="2" face="Arial"> x*x=x2 </font> </p> <br>
