--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       <html>
              <head>
                    <meta charset="utf-8">
-                   <title>Hubert</title>
+                   <title>Alan</title>
             </head>
              <body>
        <p align="left"> <font color="red" size="7" face="Arial"> Alan </font> </p> <br>
