--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
+<!- Alan Bałaban 2K1 ->
 <!DOCTYPE html>
       <html lang="pl-PL">
       <html>
              <head>
                    <meta charset="utf-8">
+                   <meta author="Alan Bałaban">
+                   <meta description="Strona">
                    <title>Alan</title>
             </head>
-             <body>
+             <body bgcolor="silver">
        <p align="left"> <font color="red" size="7" face="Arial"> Alan </font> </p> <br>
        <p align="left"> <font color="red" size="6" face="Arial"> Alan </font> </p> <br>
        <p align="left"> <font color="red" size="5" face="Arial"> Alan </font> </p> <br>
@@ -25,3 +28,28 @@
            <p > <font color="black" size="3" face="Arial"> Data urodzenia: 23 czerwca 2006 </font> </p> <br>
            <p align="right"> <font color="pink" size="2" face="Arial"> H2SO4 </font> </p> <br>
            <p align="right"> <font color="pink" size="2" face="Arial"> x*x=x2 </font> </p> <br>
+
+<h1>Dowcip o Jasiu</h1>
+<FIELDSET> <LEGEND> Nauczycielka pyta dzieci: </LEGEND><br>
+- Jakie macie zwierzęta w domach?<br>
+- Ja mam psa.<br>
+- A ja mam kota.<br>
+- A ja mam kurczaka w zamrażarce... - mówi Jaś.<br>
+</FIELDSET>
+<hr size="3" color="red">
+<h2 align="right">Dowcip o szkole</h2>
+<FIELDSET> <LEGEND> Przybiega dzieciak na stację benzynową z kanistrem: </LEGEND><br>
+- Dziesięć litrów benzyny, szybko!<br>
+- Co jest? Pali się?<br>
+- Tak, moja szkoła. Ale trochę jakby przygasa.<br>
+</FIELDSET>
+<hr size="2" color="blue">
+<h3 align="left">Dowcip o słuchu</h3>
+<FIELDSET> <LEGEND> Nauczycielka mówi: </LEGEND><br>
+- Pani syn nie powinien chodzić na lekcje gry na skrzypcach. On nie ma za grosz słuchu<br>
+Na to mama:<br>
+- On nie ma słuchać, on ma grać.<br>
+</FIELDSET>
+<hr size="1" color="green">
+<nobr> Imie          Nazwisko</nobr>
+<nobr> Alan          Bałaban</nobr>
