--- a/index.html
+++ b/index.html
@@ -51,5 +51,5 @@ Na to mama:<br>
 - On nie ma słuchać, on ma grać.<br>
 </FIELDSET>
 <hr size="1" color="green">
-<nobr> Imie          Nazwisko</nobr>
-<nobr> Alan          Bałaban</nobr>
+<nobr> Imie&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nazwisko</nobr><br>
+<nobr> Alan&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bałaban</nobr>
