--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <p align="right"> <font color=„blue” size=„3” face=„Arial”> 69-420 Ulica Fajna </font> </p> <br>
      </body>
    </html>
-           <center>  <p > <font color="green" size="5" face="Arial"> Ulubiony kolor: Zielony </font> </p> <br>  <center>
-           <p > <font color="red" size="4" face="Arial"> Ulubiony zespół muzyczny: kanye west </font> </p> <br>
-           <p > <font color="black" size="3" face="Arial"> Data urodzenia: 23 czerwca 2006 </font> </p> <br>
+           <p align=middle> <font color="green" size="5" face="Arial"> Ulubiony kolor: Zielony </font> </p> <br>
+           <p> <font color="red" size="4" face="Arial"> Ulubiony zespół muzyczny: kanye west </font> </p> <br>
+           <p> <font color="black" size="3" face="Arial"> Data urodzenia: 23 czerwca 2006 </font> </p> <br>
            <p align="right"> <font color="pink" size="2" face="Arial"> H2SO4 </font> </p> <br>
            <p align="right"> <font color="pink" size="2" face="Arial"> x*x=x2 </font> </p> <br>
 
@@ -51,5 +51,62 @@ Na to mama:<br>
 - On nie ma słuchać, on ma grać.<br>
 </FIELDSET>
 <hr size="1" color="green">
+
+<br><br><br>
+<h1 align=left>Poniżej są trzy wyliczenia z różnymi znakami wyliczenia</h1>
+<p>Popularne języki programowania</p>
+<UL TYPE=disc>
+  <LI>HTML
+  <LI>CSS
+  <LI>JS
+</UL>
+<UL TYPE=circle>
+  <LI>C#
+  <LI>C++
+  <LI>C
+</UL>
+<UL TYPE=square>
+  <LI>Python
+  <LI>Java
+  <LI>Lua
+</UL>
+<br><br><br>
+<h2>Poniżej są trzy wyliczenia z różnymi znakami numerowania</h1>
+<p>Podstawy pliku HTML</p>
+<OL TYPE=1 START=2>
+  <LI>< DOCTYPE! HTML >
+  <LI>< meta charset=utf-8 >
+  <LI>< meta lang=en-UK >
+</OL>
+<OL TYPE=a START=2>
+  <LI>< head >
+  <LI>< body >
+  <LI>< style >
+</OL>
+<OL TYPE=I START=2>
+  <LI>< h1 >
+  <LI>< p >
+  <LI>< br >
+</OL>
+<br><br><br>
+<h3>Poniżej będą trzy poziomy numerowania/wyliczenia z różnymi rodzajami numerowania/wyliczenia</h3>
+<OL start=2>
+  <LI> Podstawowe programy programistów
+    <OL type=A>
+      <LI> Visual Studio
+      <LI> GitHub
+      <LI> StackOverflow
+    </OL>
+  <LI> Działania na plikach
+    <OL type=A>
+      <LI> Pliki
+        <OL type=a>
+          <LI> Utwórz
+          <LI> Edytuj
+          <LI> Usuń
+        </OL>
+    </OL>
+</OL>
+
 <nobr> Imie&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nazwisko</nobr><br>
 <nobr> Alan&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bałaban</nobr>
