--- a/index.html
+++ b/index.html
@@ -3,18 +3,11 @@
 img[src*="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhost-white2.png"] {display: none;}
 </style>
 <html>
-    <title>shdwrv</title>
+    <title>cheemsette.github.io</title>
     <meta charset="UTF-8" />
-    <meta name="description" content="shdwrv - proffesional in ur bed" />
-    <meta name="keywords" content="shdwrv.cf, shdwrv.xyz, shdwrv, ur mom, hvh" />
-    <meta name="author" content="shdwrv" />
+    <meta name="author" content="Alan" />
     <meta property="og:type" content="site" />
-    <meta property="og:title" content="shdwrv" />
-    <meta property="og:description" content="shdwrv - proffesional in ur bed" />
-    <meta property="og:url" content="http://shdwrv.cf/" />
     <meta property="og:image" content="assets/icons/obnoxious.jpg" />
-    <meta itemprop="name" content="shdwrv" />
-    <meta itemprop="description" content="shdwrv - proffesional in ur bed" />
     <meta itemprop="image" content="assets/icons/obnoxious.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
@@ -47,7 +40,7 @@ img[src*="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhos
 
     <div class="container" style="display: none;">
       <h1 class="brand-header">
-        shdwrv.xyz
+        cheemsette.github.io
       </h1>
 
       <p><span id="brand"></span></p>
