--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ img[src*="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhos
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
   </head>
 
-  <body>
+  <body class="skip">
     <script type="text/javascript" src="assets/javascript/app.js"></script>
 
     <div id="main">
