--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ img[src*="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhos
     </div>
 
     <div class="top-right">
-      <i><a class="skip">click anywhere to continue</a></i>
+      <i><a class="skip">kliknij tutaj aby kontynuowac</a></i>
     </div>
 
     <div class="footer">
