--- a/zadania/index.html
+++ b/zadania/index.html
@@ -1,17 +1,17 @@
-<!-Alan Ba³aban 2K1->
+<!-Alan BaÅ‚aban 2K1->
 <!DOCTYPE html>
       <html lang="pl-PL">
       <html>
              <head>
 				   <a href="skok poczatek"></a>
                    <meta charset="utf-8">
-                   <meta author="Alan Ba³aban">
+                   <meta author="Alan BaÅ‚aban">
                    <meta description="Strona">
                    <title>Alan</title>
             </head>
              <body bgcolor="silver">
-	   <p>Walidacja jest pierwszym krokiem w ocenie dostêpnoœci stron internetowych.</p>
-	   <p>Walidator – program sprawdzaj¹cy poprawnoœæ dokumentu o okreœlonej sk³adni.</p>
+	   <p>Walidacja jest pierwszym krokiem w ocenie dostÄ™pnoÅ›ci stron internetowych.</p>
+	   <p>Walidator â€“ program sprawdzajÄ…cy poprawnoÅ›Ä‡ dokumentu o okreÅ›lonej skÅ‚adni.</p>
 	   <a href="http://validator.w3.org/" target="_blank">Link do walidatora</a>
        <p align="left"> <font color="red" size="7" face="Arial"> Alan </font> </p> <br>
        <p align="left"> <font color="red" size="6" face="Arial"> Alan </font> </p> <br>
@@ -23,56 +23,56 @@
               </body>
            </html>
 <br>
-<p align="right"> <font color=„blue” size=„3” face=„Arial”> 69-420 Ulica Fajna </font> </p> <br>
+<p align="right"> <font color=â€žblueâ€ size=â€ž3â€ face=â€žArialâ€> 69-420 Ulica Fajna </font> </p> <br>
    </html>
            <center>  <p > <font color="green" size="5" face="Arial"> Ulubiony kolor: Zielony </font> </p> <br>  <center>
-           <p > <font color="red" size="4" face="Arial"> Ulubiony zespó³ muzyczny: kanye west </font> </p> <br>
+           <p > <font color="red" size="4" face="Arial"> Ulubiony zespÃ³Å‚ muzyczny: kanye west </font> </p> <br>
            <p > <font color="black" size="3" face="Arial"> Data urodzenia: 23 czerwca 2006 </font> </p> <br>
            <p align="right"> <font color="pink" size="2" face="Arial"> H2SO4 </font> </p> <br>
            <p align="right"> <font color="pink" size="2" face="Arial"> x*x=x2 </font> </p> <br>
 
 <h1>Dowcip o Jasiu</h1>
 <FIELDSET> <LEGEND> Nauczycielka pyta dzieci: </LEGEND><br>
-- Jakie macie zwierzêta w domach?<br>
+- Jakie macie zwierzÄ™ta w domach?<br>
 - Ja mam psa.<br>
 - A ja mam kota.<br>
-- A ja mam kurczaka w zamra¿arce... - mówi Jaœ.<br>
+- A ja mam kurczaka w zamraÅ¼arce... - mÃ³wi JaÅ›.<br>
 </FIELDSET>
 <hr size="3" color="red">
 <h2 align="right">Dowcip o szkole</h2>
-<FIELDSET> <LEGEND> Przybiega dzieciak na stacjê benzynow¹ z kanistrem: </LEGEND><br>
-- Dziesiêæ litrów benzyny, szybko!<br>
-- Co jest? Pali siê?<br>
-- Tak, moja szko³a. Ale trochê jakby przygasa.<br>
+<FIELDSET> <LEGEND> Przybiega dzieciak na stacjÄ™ benzynowÄ… z kanistrem: </LEGEND><br>
+- DziesiÄ™Ä‡ litrÃ³w benzyny, szybko!<br>
+- Co jest? Pali siÄ™?<br>
+- Tak, moja szkoÅ‚a. Ale trochÄ™ jakby przygasa.<br>
 </FIELDSET>
 <hr size="2" color="blue">
-<h3 align="left">Dowcip o s³uchu</h3>
-<FIELDSET> <LEGEND> Nauczycielka mówi: </LEGEND><br>
-- Pani syn nie powinien chodziæ na lekcje gry na skrzypcach. On nie ma za grosz s³uchu<br>
+<h3 align="left">Dowcip o sÅ‚uchu</h3>
+<FIELDSET> <LEGEND> Nauczycielka mÃ³wi: </LEGEND><br>
+- Pani syn nie powinien chodziÄ‡ na lekcje gry na skrzypcach. On nie ma za grosz sÅ‚uchu<br>
 Na to mama:<br>
-- On nie ma s³uchaæ, on ma graæ.<br>
+- On nie ma sÅ‚uchaÄ‡, on ma graÄ‡.<br>
 </FIELDSET>
 <hr size="1" color="green">
 <nobr> Imie&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nazwisko</nobr><br>
-<nobr> Alan&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ba³aban</nobr>
+<nobr> Alan&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;BaÅ‚aban</nobr>
 
 <OL>
-	<LI> Urz¹dzenia wewnêtrzne komputera
+	<LI> UrzÄ…dzenia wewnÄ™trzne komputera
 		<OL type=A>
-			<LI> P³yta g³ówna
+			<LI> PÅ‚yta gÅ‚Ã³wna
 			<LI> Mikroprocesor
-			<LI> Karty rozszerzeñ
+			<LI> Karty rozszerzeÅ„
 		</OL>
-	<LI> Urz¹dzenia zewnêtrzne komputera
+	<LI> UrzÄ…dzenia zewnÄ™trzne komputera
 		<OL type=A>
 			<LI> Monitor
 				<OL type=a>
-					<LI> z lamp¹ kineskopow¹
+					<LI> z lampÄ… kineskopowÄ…
 					<LI> LCD
 				</OL>
 			<LI> drukarka
 				<OL type=a>
-					<LI> ig³owa
+					<LI> igÅ‚owa
 					<LI> laserowa
 					<LI> atramentowe
 				</OL>
