--- a/zadania/index.html
+++ b/zadania/index.html
@@ -25,7 +25,7 @@
 <br>
 <p align="right"> <font color=„blue” size=„3” face=„Arial”> 69-420 Ulica Fajna </font> </p> <br>
    </html>
-           <center>  <p > <font color="green" size="5" face="Arial"> Ulubiony kolor: Zielony </font> </p> <br>  <center>
+           <center>  <p > <font color="green" size="5" face="Arial"> Ulubiony kolor: Zielony </font> </p> <br>  </center>
            <p > <font color="red" size="4" face="Arial"> Ulubiony zespół muzyczny: kanye west </font> </p> <br>
            <p > <font color="black" size="3" face="Arial"> Data urodzenia: 23 czerwca 2006 </font> </p> <br>
            <p align="right"> <font color="pink" size="2" face="Arial"> H2SO4 </font> </p> <br>
