--- a/zadania/index.html
+++ b/zadania/index.html
@@ -78,8 +78,9 @@ Na to mama:<br>
 				</OL>
 		</OL>
 </OL>
-
+<div style="text-align:center;">
 <A href="poczta_balaban.html"><img src="poczta.png" border=0 width=70 height=50></A> <br>
 <A href="plik_balaban.html">Plik</A> <br>
 <A href="tabela_balaban.html">Tabela</A> <br>
 <A href="formularz_balaban.html">Formularz</A> <br>
+</div>
