--- a/zadania/index.html
+++ b/zadania/index.html
@@ -3,7 +3,6 @@
       <html lang="pl-PL">
       <html>
              <head>
-				   <a href="skok poczatek"></a>
                    <meta charset="utf-8">
                    <meta author="Alan Bałaban">
                    <meta description="Strona">
@@ -83,4 +82,5 @@ Na to mama:<br>
 <A href="plik_balaban.html">Plik</A> <br>
 <A href="tabela_balaban.html">Tabela</A> <br>
 <A href="formularz_balaban.html">Formularz</A> <br>
+<A href="walidacja_balaban.html">Walidacja</A> <br>
 </div>
