--- a/zadania/walidacja_balaban.html
+++ b/zadania/walidacja_balaban.html
@@ -9,6 +9,6 @@
                    <title>Alan</title>
             </head>
         </html>
-<img src="blad_balaban.jpg">
-<img src="poprawa_balaban.jpg">
+<img src="blad_balaban.JPG">
+<img src="poprawa_balaban.JPG">
 <a href="index.html>Powrót</a>
