--- a/sprawdzian/index.html
+++ b/sprawdzian/index.html
@@ -16,13 +16,10 @@
 		Nulla eget ultricies erat. Praesent ornare dui et volutpat egestas. Aenean ac ligula ut arcu iaculis pulvinar ac et tortor. Duis consectetur, leo non ultrices laoreet, tortor eros malesuada odio.
 		<br>
 		</font>
-		<img src="img/logo_balaban.png" style="width:700px; height:200px; border:6px solid yellow;" alt="Logo firmy MebleNet">
+		<img src="img/logo_balaban.png" style="width:700px; height:200px; border:6px solid yellow; position:absolute; left:25%;" alt="Logo firmy MebleNet">
 		<br>
 		<font face="Consolas" color="purple">
-		Praesent vitae bibendum lacus, eget maximus tortor. Nunc rutrum mauris et nisl varius pellentesque. Nunc eu egestas urna, a aliquam sem. Vivamus at libero vitae mi venenatis cursus ut at ex. Donec suscipit luctus urna, sed placerat justo eleifend eget. 
-		Sed <b>lacus orci</b>, vestibulum in mauris vitae, facilisis consectetur velit. Aenean eget auctor risus, <u>et mattis felis</u>. Aliquam tempus nisi pharetra tempor finibus. Nulla facilisi. Etiam feugiat turpis eu luctus fringilla. Praesent elementum egestas ante bibendum egestas. 
-		Fusce nulla augue, vulputate nec ultrices id, eleifend tempor ligula.
-		Duis dui tellus, facilisis id pretium non, commodo vel urna. Fusce blandit pharetra.
+		Praesent vitae bibendum lacus, eget &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>maximus tortor.</b> Nunc rutrum mauris et nisl <u>varius pellentesque</u>. Nunc eu &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; egestas urna, a aliquam sem. Vivamus at libero vitae mi &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; venenatis cursus ut at ex.<br><br><br><br><br><br><br><br>
 		</font>
 	</div>
 	<hr size="3" color="purple">
