--- a/zadania/walidacja_balaban.html
+++ b/zadania/walidacja_balaban.html
@@ -10,5 +10,5 @@
             </head>
         </html>
 <img src="blad_balaban.JPG">
-<img src="poprawa_balaban.JPG">
+<img src="poprawa_balaban.JPG"><br>
 <a href="index.html>Powrót</a>
