--- a/zadania/walidacja_balaban.html
+++ b/zadania/walidacja_balaban.html
@@ -8,7 +8,9 @@
                    <meta description="Strona">
                    <title>Alan</title>
             </head>
-        </html>
-<img src="blad_balaban.JPG">
-<img src="poprawa_balaban.JPG"><br>
-<a href="index.html>Powrót</a>
+            <body>
+                   <img src="blad_balaban.JPG">
+                   <img src="poprawa_balaban.JPG"><br>
+                   <a href="index.html>Powrót</a>
+             </body>
+      </html>
