--- a/zadania/walidacja_balaban.html
+++ b/zadania/walidacja_balaban.html
@@ -11,6 +11,6 @@
             <body>
                    <img src="blad_balaban.JPG">
                    <img src="poprawa_balaban.JPG"><br>
-                   <a href="index.html>Powrót</a>
+                   <a href="index.html">Powrót</a>
              </body>
       </html>
