--- a/zadania/tabela_balaban.html
+++ b/zadania/tabela_balaban.html
@@ -5,8 +5,76 @@
 			<meta charset="utf-8">
 			<title>Alan Bałaban</title>
 		</head>
-		<body>
-			tutaj bedzie tabela <br>
+		<body>			
+			<table border="1" style="border-color:red;">
+				<caption>Tabela HTML</caption>
+				<thead style="color:white;">
+					<tr>
+						<th colspan=5 bgcolor="control"> Dane Procesora - Bałaban Alan 2K1 </th>
+					</tr>
+					<tr bgcolor="tomato">
+						<th> Model </th>
+						<th> Taktowanie </th>
+						<th> Liczba rdzeni </th>
+						<th> Pamięć cache </th>
+						<th> Pobór mocy </th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr bgcolor="goldenrod">
+						<th> Ryzen 9 9790X </th>
+						<th> 5.5 GHz </th>
+						<th> 16 </th>
+						<th> 80 MB </th>
+						<th> 180 W </th>
+					</tr>
+
+					<tr bgcolor="gold">
+						<th> Ryzen 9 7900X </th>
+						<th> 4.9 GHz </th>
+						<th> 12 </th>
+						<th> 76 MB </th>
+						<th> 175 W </th>
+					</tr>
+
+					<tr bgcolor="goldenrod">
+						<th> Ryzen 7 7700X </th>
+						<th> 4.7 GHz </th>
+						<th> 8 </th>
+						<th> 40 MB </th>
+						<th> 115 W </th>
+					</tr>
+
+					<tr bgcolor="tomato">
+						<th> Ryzen 5 7600X </th>
+						<th> 4.2 GHz </th>
+						<th> 8 </th>
+						<th> 38 MB </th>
+						<th> 110 W </th>
+					</tr>
+
+					<tr bgcolor="goldenrod">
+						<th> Ryzen 7 5700G </th>
+						<th> 3.7 GHz </th>
+						<th> 8 </th>
+						<th> 20 MB </th>
+						<th> 70 W </th>
+					</tr>
+
+					<tr bgcolor="gold">
+						<th> Ryzen 5 4600G </th>
+						<th> 3.7 GHz </th>
+						<th> 6 </th>
+						<th> 11 MB </th>
+						<th> 65 W </th>
+					</tr>
+
+					<tr style="color:control;">
+						<th colspan=5 bgcolor="control"> Dane procesora </th>
+					</tr>
+				</tbody>
+			</table>
+			
 			<a href="index.html">Powrót</a>
 		</body>
 	</html>
