--- a/zadania/index.html
+++ b/zadania/index.html
@@ -21,11 +21,11 @@
        <p align="left"> <font color="red" size="1" face="Arial"> Alan </font> </p> <br>
 		    
 		    <map id="mapa_kowalski">
-			<area shape="rect" coords="15,90,90,128" href="test.txt">
-			<area shape="rect" coords="14,199,90,233" href="tabela_balaban.html" target="obszar_glowny">
-			<area shape="circle" coords="53,269,21" href="formularz_balaban.html" target="obszar_glowny">
-			<area shape="poly" coords="20,73,53,8,85,73" href="mailto:mkryniew@ids.gda.pl">
-			<area shape="circle" coords="51,166,20" href="https://github.com/cheemsette/zadania1-5.github.io" target="obszar_glowny">
+			<area shape="rect" coords="15,90,90,128" href="tabela_balaban.html">
+			<area shape="rect" coords="14,199,90,233" href="mailto:mkryniew@ids.gda.pl" target="obszar_glowny">
+			<area shape="circle" coords="53,269,21" href="https://github.com/cheemsette/zadania1-5.github.io" target="obszar_glowny">
+			<area shape="poly" coords="20,73,53,8,85,73" href="test.txt">
+			<area shape="circle" coords="51,166,20" href="formularz_balaban.html" target="obszar_glowny">
 		</map>
 		        <img src="mapa.gif" alt="tutaj wybieraj linki" usemap="#mapa_kowalski">
               </body>
