--- a/zadania/index.html
+++ b/zadania/index.html
@@ -1,86 +1,86 @@
 <!-Alan Bałaban 2K1->
 <!DOCTYPE html>
-      <html lang="pl-PL">
-      <html>
-             <head>
-                   <meta charset="utf-8">
-                   <meta author="Alan Bałaban">
-                   <meta description="Strona">
-                   <title>Alan</title>
-            </head>
-            <body bgcolor="silver">
+<html lang="pl-PL">
+	<head>
+                <meta charset="utf-8">
+                <meta author="Alan Bałaban">
+                <meta description="Strona">
+                <title>Alan</title>
+        </head>
+        <body bgcolor="silver">
 	   <p>Walidacja jest pierwszym krokiem w ocenie dostępności stron internetowych.</p>
 	   <p>Walidator – program sprawdzający poprawność dokumentu o określonej składni.</p>
 	   <a href="http://validator.w3.org/" target="_blank">Link do walidatora</a>
-       <p align="left"> <font color="red" size="7" face="Arial"> Alan </font> </p> <br>
-       <p align="left"> <font color="red" size="6" face="Arial"> Alan </font> </p> <br>
-       <p align="left"> <font color="red" size="5" face="Arial"> Alan </font> </p> <br>
-       <p align="left"> <font color="red" size="4" face="Arial"> Alan </font> </p> <br>
-       <p align="left"> <font color="red" size="3" face="Arial"> Alan </font> </p> <br>
-       <p align="left"> <font color="red" size="2" face="Arial"> Alan </font> </p> <br>
-       <p align="left"> <font color="red" size="1" face="Arial"> Alan </font> </p> <br>
-              </body>
-           </html>
+       	   <p align="left"> <font color="red" size="7" face="Arial"> Alan </font> </p> <br>
+           <p align="left"> <font color="red" size="6" face="Arial"> Alan </font> </p> <br>
+           <p align="left"> <font color="red" size="5" face="Arial"> Alan </font> </p> <br>
+       	   <p align="left"> <font color="red" size="4" face="Arial"> Alan </font> </p> <br>
+       	   <p align="left"> <font color="red" size="3" face="Arial"> Alan </font> </p> <br>
+      	   <p align="left"> <font color="red" size="2" face="Arial"> Alan </font> </p> <br>
+      	   <p align="left"> <font color="red" size="1" face="Arial"> Alan </font> </p> <br>
+              
+           
 <br>
-<p align="right"> <font color=„blue” size=„3” face=„Arial”> 69-420 Ulica Fajna </font> </p> <br>
-   </html>
-           <center>  <p > <font color="green" size="5" face="Arial"> Ulubiony kolor: Zielony </font> </p> <br>  </center>
-           <p > <font color="red" size="4" face="Arial"> Ulubiony zespół muzyczny: kanye west </font> </p> <br>
-           <p > <font color="black" size="3" face="Arial"> Data urodzenia: 23 czerwca 2006 </font> </p> <br>
+<p align="right"> <font color="„blue”" size="„3”" face="„Arial”"> 69-420 Ulica Fajna </font> </p> <br>
+   
+           <center>  <p> <font color="green" size="5" face="Arial"> Ulubiony kolor: Zielony </font> </p> <br>  </center>
+           <p> <font color="red" size="4" face="Arial"> Ulubiony zespół muzyczny: kanye west </font> </p> <br>
+           <p> <font color="black" size="3" face="Arial"> Data urodzenia: 23 czerwca 2006 </font> </p> <br>
            <p align="right"> <font color="pink" size="2" face="Arial"> H2SO4 </font> </p> <br>
            <p align="right"> <font color="pink" size="2" face="Arial"> x*x=x2 </font> </p> <br>
 
 <h1>Dowcip o Jasiu</h1>
-<FIELDSET> <LEGEND> Nauczycielka pyta dzieci: </LEGEND><br>
+<fieldset> <legend> Nauczycielka pyta dzieci: </legend><br><img src="kot.gif" align="right" style="border-style:solid; border-width:33px;" width="123px" height="102px" alt="grafika1-balaban"><img src="kot.gif" align="left" style="border-style:solid; border-width:16px;" width="106px" height="107px" alt="grafika2-balaban">
 - Jakie macie zwierzęta w domach?<br>
 - Ja mam psa.<br>
 - A ja mam kota.<br>
 - A ja mam kurczaka w zamrażarce... - mówi Jaś.<br>
-</FIELDSET>
+</fieldset>
 <hr size="3" color="red">
 <h2 align="right">Dowcip o szkole</h2>
-<FIELDSET> <LEGEND> Przybiega dzieciak na stację benzynową z kanistrem: </LEGEND><br>
-- Dziesięć litrów benzyny, szybko!<br>
+<fieldset> <legend> Przybiega dzieciak na stację benzynową z kanistrem: </legend><br>
+- Dziesięć litrów benzyny, szybko!<img src="free-smiley-sunglasses.gif" align="right" style="border-style:solid; border-width:12px;" width="102px" height="123px" alt="grafika3-balaban"><img src="" align="left" style="border-style:solid; border-width:17px;" width="107px" height="106px" alt="grafika4-balaban"><br>
 - Co jest? Pali się?<br>
 - Tak, moja szkoła. Ale trochę jakby przygasa.<br>
-</FIELDSET>
+</fieldset>
 <hr size="2" color="blue">
 <h3 align="left">Dowcip o słuchu</h3>
-<FIELDSET> <LEGEND> Nauczycielka mówi: </LEGEND><br>
-- Pani syn nie powinien chodzić na lekcje gry na skrzypcach. On nie ma za grosz słuchu<br>
+<fieldset> <legend> Nauczycielka mówi: </legend><br>
+<img src="guchy frajer.gif" align="right" style="border-style:solid; border-width:14px;" width="104px" height="104px" alt="grafika5-balaban">- Pani syn nie powinien chodzić na lekcje gry na skrzypcach. On nie ma za grosz słuchu<br>
 Na to mama:<br>
 - On nie ma słuchać, on ma grać.<br>
-</FIELDSET>
+</fieldset>
 <hr size="1" color="green">
 <nobr> Imie&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nazwisko</nobr><br>
 <nobr> Alan&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bałaban</nobr>
 
-<OL>
-	<LI> Urządzenia wewnętrzne komputera
-		<OL type=A>
-			<LI> Płyta główna
-			<LI> Mikroprocesor
-			<LI> Karty rozszerzeń
-		</OL>
-	<LI> Urządzenia zewnętrzne komputera
-		<OL type=A>
-			<LI> Monitor
-				<OL type=a>
-					<LI> z lampą kineskopową
-					<LI> LCD
-				</OL>
-			<LI> drukarka
-				<OL type=a>
-					<LI> igłowa
-					<LI> laserowa
-					<LI> atramentowe
-				</OL>
-		</OL>
-</OL>
+<ol>
+	<li> Urządzenia wewnętrzne komputera
+		<ol type="A">
+			<li> Płyta główna
+			</li><li> Mikroprocesor
+			</li><li> Karty rozszerzeń
+		</li></ol>
+	</li><li> Urządzenia zewnętrzne komputera
+		<ol type="A">
+			<li> Monitor
+				<ol type="a">
+					<li> z lampą kineskopową
+					</li><li> LCD
+				</li></ol>
+			</li><li> drukarka
+				<ol type="a">
+					<li> igłowa
+					</li><li> laserowa
+					</li><li> atramentowe
+				</li></ol>
+		</li></ol>
+</li></ol>
 <div style="text-align:center;">
-<A href="poczta_balaban.html"><img src="poczta.png" border=0 width=70 height=50></A> <br>
-<A href="plik_balaban.html">Plik</A> <br>
-<A href="tabela_balaban.html">Tabela</A> <br>
-<A href="formularz_balaban.html">Formularz</A> <br>
-<A href="walidacja_balaban.html">Walidacja</A> <br>
+<a href="poczta_balaban.html"><img src="poczta.png" border="0" width="70" height="50"></a> <br>
+<a href="plik_balaban.html">Plik</a> <br>
+<a href="tabela_balaban.html">Tabela</a> <br>
+<a href="formularz_balaban.html">Formularz</a> <br>
+<a href="walidacja_balaban.html">Walidacja</a> <br>
 </div>
+</body></html>
