--- a/zadania/index.html
+++ b/zadania/index.html
@@ -39,7 +39,7 @@
 <hr size="3" color="red">
 <h2 align="right">Dowcip o szkole</h2>
 <fieldset> <legend> Przybiega dzieciak na stację benzynową z kanistrem: </legend><br>
-- Dziesięć litrów benzyny, szybko!<img src="free-smiley-sunglasses.gif" align="right" style="border-style:solid; border-width:12px;" width="102px" height="123px" alt="grafika3-balaban"><img src="" align="left" style="border-style:solid; border-width:17px;" width="107px" height="106px" alt="grafika4-balaban"><br>
+- Dziesięć litrów benzyny, szybko!<img src="free-smiley-sunglasses.gif" align="right" style="border-style:solid; border-width:12px;" width="102px" height="123px" alt="grafika3-balaban"><img src="free-smiley-sunglasses.gif" align="left" style="border-style:solid; border-width:17px;" width="107px" height="106px" alt="grafika4-balaban"><br>
 - Co jest? Pali się?<br>
 - Tak, moja szkoła. Ale trochę jakby przygasa.<br>
 </fieldset>
