--- a/zadania/index.html
+++ b/zadania/index.html
@@ -19,7 +19,12 @@
       	   <p align="left"> <font color="red" size="2" face="Arial"> Alan </font> </p> <br>
       	   <p align="left"> <font color="red" size="1" face="Arial"> Alan </font> </p> <br>
               
-           
+           <p align="left"> <font color="orange" size="1" face="Consolas"> D: Duży smutek </font> </p> <br>
+           <p align="left"> <font color="yellow" size="2" face="Consolas"> :D Duże szczęście </font> </p> <br>
+       	   <p align="left"> <font color="green" size="3" face="Consolas"> :p Wystawiony język </font> </p> <br>
+       	   <p align="left"> <font color="blue" size="4" face="Consolas"> :| Neutralna twarz </font> </p> <br>
+      	   <p align="left"> <font color="purple" size="5" face="Consolas"> :O Zdziwienie </font> </p> <br>
+      	   <p align="left"> <font color="red" size="6" face="Consolas"> :^ Pocalunek </font> </p> <br>
 <br>
 <p align="right"> <font color="„blue”" size="„3”" face="„Arial”"> 69-420 Ulica Fajna </font> </p> <br>
    
