--- a/zadania/formularz_balaban.html
+++ b/zadania/formularz_balaban.html
@@ -7,57 +7,7 @@
 <title> Formularz Bałaban </title>
 </head>
 <body bgcolor="#DCDCDC">
-<center><h1> Formularz projekt</h1></center>
-<form enctype="text/plain" action="mailto:mkryniew@wp.pl" subject="formularz_dane" method="Post">
-<TABLE>
-<TR height="100">
-<TD width="500">
-<b>Imie:</b> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<input name="imie" size="22">
-<br><br>
-<b>Drugie imie:</b>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-&nbsp &nbsp &nbsp &nbsp <input name="drugie" size="22">
-<br><br>
-<b>Nazwisko: </b> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <input name="nazwisko" size="22">
-<br><br>
-<b>Pseudonim:</b>&nbsp &nbsp<input name="login" size="22"><nobr> <br>
-</TD>
-<TD width="300" >
-<center><font size="5" color="red"><b>Ulubiony przedmiot zawodowy</b></font></center><br>
-<center> <select>
-<option value="passo">PASSO</option>
-<option value="lsk">LSK</option>
-<option value="witr">Witryny I Aplikacje Sieciowe</option>
-<option value="utk">UTK</option>
-<option value="inf">Informatyka</option>
-<option value="bd">Bazy Danych</option>
-</select> </center>
-</TD>
-<TD width="500">
-<nobr>Napisz swoja ulubiona gre. Max 40.<br>znakow</nobr>
-<br><br>
-<input name="gra" size="25" maxlength="40">
-</TD>
-</TR>
-<TR height="200">
-<TD><nobr>Czy lubisz C#?</nobr>
-<br><br>
-<input type="radio" name="pyt1" value="tak"> Tak
-<br><br>
-<input type="radio" name="pyt2" value="nie"> Nie
-<br><br>
-<input type="radio" name="pyt3" value="nie wiem co to"> Nie wiem co to <br> <br> </TD>
-<TD>Czas: &nbsp &nbsp &nbsp &nbsp<input type="time"><br>
-Data: &nbsp &nbsp &nbsp&nbsp &nbsp<input type="date"> <br>
-<br> </TD>
-
-</TR>
-<TR height="100">
-
-<TD><nobr><input type="reset" value="Reset" style="height:80px; width:150px"> </TD>
-<TD> <input type="submit" value"=Wyślij formularz" style="height:80px; width:150px"> </TD>
-</TR>
-</TABLE>
-</form>
+<center><h1>tu bedize formularz</h1></center>
+<a href="index.html">Powrót</a>
 </body>
 </html>
