--- a/zadania/plik_balaban.html
+++ b/zadania/plik_balaban.html
@@ -6,7 +6,8 @@
 			<title>Alan Bałaban</title>
 		</head>
 		<body>
-			<a href="test.txt" download>Pobierz</a><br>
+			<!--<a href="test.txt" download>Pobierz</a><br> -->
+			tutaj bedzie pobieranie
 			<a href="index.html">Powrót</a>
 		</body>
 	</html>
