--- a/zadania/poczta_balaban.html
+++ b/zadania/poczta_balaban.html
@@ -6,7 +6,8 @@
 			<title>Alan Bałaban</title>
 		</head>
 		<body>
-			<a href="mailto:alabala84@edu.gdansk.pl"><img src="poczta.png" border=0 width=70 height=50></a><br>
+			<!-- <a href="mailto:alabala84@edu.gdansk.pl"><img src="poczta.png" border=0 width=70 height=50></a><br> -->
+			tutaj bedzie poczta
 			<a href="index.html">Powrót</a>
 		</body>
 	</html>
