--- a/zadania/tabela_balaban.html
+++ b/zadania/tabela_balaban.html
@@ -6,7 +6,7 @@
 			<title>Alan Bałaban</title>
 		</head>
 		<body>			
-			<table border="1" style="border-color:red;">
+			<!-- <table border="1" style="border-color:red;">
 				<caption>Tabela HTML</caption>
 				<thead style="color:white;">
 					<tr>
@@ -73,8 +73,8 @@
 						<th colspan=5 bgcolor="control"> Dane procesora </th>
 					</tr>
 				</tbody>
-			</table>
-			
+			</table> -->
+			tutaj bedzie tabela
 			<a href="index.html">Powrót</a>
 		</body>
 	</html>
