--- a/zadania/poczta_balaban.html
+++ b/zadania/poczta_balaban.html
@@ -7,7 +7,7 @@
 		</head>
 		<body>
 			<!-- <a href="mailto:alabala84@edu.gdansk.pl"><img src="poczta.png" border=0 width=70 height=50></a><br> -->
-			tutaj bedzie poczta
+			tutaj bedzie poczta<br>
 			<a href="index.html">Powrót</a>
 		</body>
 	</html>
