--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <div class="top-right">
-      <i><a class="skip">kliknij tutaj aby kontynuowac</a></i>
+      <i><a class="skip">loading...</a></i>
     </div>
 
     <div class="footer">
