--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div id="pattern"></div>
 
       <audio id="audio" loop="">
-        <source src="assets/others/KUSO GVKI - Cinnamon (feat. Apfel) (splash! Mag Premiere).mp4" type="audio/mp4" />
+        <source src="assets/others/render.mp4" type="audio/mp4" />
         <script>
           const audio = document.getElementById('audio');
 
@@ -61,7 +61,7 @@
       </audio>
 
       <video id="background" loop="">
-        <source src="assets/others/KUSO GVKI - Cinnamon (feat. Apfel) (splash! Mag Premiere).mp4" type="video/mp4" />
+        <source src="assets/others/render.mp4" type="video/mp4" />
         <script>
           const video = document.getElementById('background');
 
